Refactor article cards layout and styling

--- a/index.html
+++ b/index.html
@@ -111,29 +111,32 @@
 
       </div>
       <div class="articles-section">
-        <h1 class="art-section-title">Art Articles </h1>
-            <div class="article-content">   
-                <div class="article-card">  
-        <img src="./pexels-photo-1566909.jpeg" class="articles-image"/>
-        <h3 class="article-text">Color Theory</h3>
-        <button href="#" class="button-link">
-            Read article</button>
+        <h1 class="art-section-title">Art Articles</h1>
+        <div class="article-content">   
+            <div class="article-card">  
+                <img src="./pexels-photo-1566909.jpeg" class="articles-image"/>   
+                <div class="article-text">
+                    <h3>Art History</h3>
+                    <button href="#" class="button-link">Read article</button>
+                </div>     
+            </div>
+            <div class="article-card">  
+                <img src="./pexels-photo-820673.jpeg" class="articles-image"/>
+                <div class="article-text">
+                    <h3>History of Art</h3>
+                    <button href="#" class="button-link">Read article</button>
+                </div>
+            </div>
+            <div class="article-card">
+                <img src="./660u0g.jpg" class="articles-image"/>
+                <div class="article-text">
+                    <h3>Color Types</h3>
+                    <button href="#" class="button-link">Read article</button>
+                </div>
+            </div>
+        </div>
     </div>
-        <div class="article-card">  
-        <img src="./pexels-photo-820673.jpeg" class="articles-image"/>
-        <h3 class="article-text">History of Art</h3>
-        <button href="#" class="button-link">
-            Read article</button>
-    </div>
-        <div class="article-card">
-        <img src="./660u0g.jpg" class="articles-image"/>
-        <h3 class="article-text">Color Types</h3>
-        <button href="#" class="button-link">
-            Read article</button>
-    </div>
-
-
-      </div>
+    
     </div>
     <script src="script.js"></script>
 
